new changes notification api socket implemented markup fix
